--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-paper": "^2.4.0",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9"
